k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      name: tic-tac-toe
      labels:
        app: tic-tac-toe
    spec:
      containers:
        - name: tic-tac-toe-server
          image: tic-tac-toe-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: api
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: api
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 12
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: api
              scheme: HTTP
            initialDelaySeconds: 90
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
      restartPolicy: Always
      volumes:
        - name: google-cloud-key
          secret:
            secretName: tic-tac-toe-sa-key
